--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,15 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+build/**/*.js
+build/**/*.js.map
+src/**/*.js
+src/**/*.js.map
+src/**/*.jsx.map
+src/**/*.jsx
+mock/**/*.js
+mock/**/*.js.map
+tests/**/*.js
+tests/**/*.js.map
+
